// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill Pill should render as closable 1`] = `
<div>
  <div
    class="tag-pills blue medium"
  >
    <span
      class="label medium"
    >
      A closable pill
    </span>
    <button
      aria-disabled="false"
      class="close-button button button-default button-small pill-shape icon-left"
    >
      <span
        class="icon icon-wrapper"
        role="presentation"
      >
        <svg
          role="presentation"
          style="width: 16px; height: 16px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
            style="fill: currentColor;"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Pill Pill should render normally 1`] = `
<div>
  <div
    class="tag-pills blue medium read-only"
  >
    <span
      class="label medium"
    >
      A pill
    </span>
  </div>
</div>
`;

exports[`Pill Pill should render with a theme 1`] = `
<div>
  <div
    class="tag-pills white medium read-only"
  >
    <span
      class="label medium"
    >
      A themed pill
    </span>
  </div>
</div>
`;

exports[`Pill Pill should render with button 1`] = `
<div>
  <div
    class="tag-pills blue medium"
  >
    <span
      class="label medium"
    >
      A button pill
    </span>
    <button
      aria-disabled="false"
      aria-label="Thumbs up"
      class="button button button-default button-small pill-shape icon-left"
    >
      <span>
        <span
          class="icon icon-wrapper"
          role="presentation"
        >
          <svg
            role="presentation"
            style="width: 16px; height: 16px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M5,9V21H1V9H5M9,21A2,2 0 0,1 7,19V9C7,8.45 7.22,7.95 7.59,7.59L14.17,1L15.23,2.06C15.5,2.33 15.67,2.7 15.67,3.11L15.64,3.43L14.69,8H21C22.11,8 23,8.9 23,10V12C23,12.26 22.95,12.5 22.86,12.73L19.84,19.78C19.54,20.5 18.83,21 18,21H9M9,19H18.03L21,12V10H12.21L13.34,4.68L9,9.03V19Z"
              style="fill: currentColor;"
            />
          </svg>
        </span>
        <span
          class="button-text-small"
        >
          2
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Pill Pill should render with icon 1`] = `
<div>
  <div
    class="tag-pills blue medium read-only"
  >
    <span
      class="icon icon-start icon-wrapper"
      role="presentation"
    >
      <svg
        role="presentation"
        style="width: 16px; height: 16px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
          style="fill: currentColor;"
        />
      </svg>
    </span>
    <span
      class="label medium"
    >
      A pill with icon
    </span>
  </div>
</div>
`;

exports[`Pill Pill should render with icon to the end of its label 1`] = `
<div>
  <div
    class="tag-pills blue medium read-only"
  >
    <span
      class="label medium"
    >
      A pill with icon
    </span>
    <span
      class="icon icon-end icon-wrapper"
      role="presentation"
    >
      <svg
        role="presentation"
        style="width: 16px; height: 16px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
          style="fill: currentColor;"
        />
      </svg>
    </span>
  </div>
</div>
`;
